--- a/.github/workflows/DownloadBlob_build_and_test_on_main.yml
+++ b/.github/workflows/DownloadBlob_build_and_test_on_main.yml
@@ -15,6 +15,8 @@ jobs:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/build_main.yml@main
     with:
       workdir: Frends.AzureBlobStorage.DownloadBlob
+      env_var_name_1: HiQ_AzureBlobStorage_ConnString
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       HIQ_AZUREBLOBSTORAGE_CONNSTRING: ${{ secrets.HiQ_AzureBlobStorage_ConnString }}
+      env_var_value_1: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CONNSTRING }}
