--- a/.github/workflows/ReadBlob_release.yml
+++ b/.github/workflows/ReadBlob_release.yml
@@ -9,6 +9,8 @@ jobs:
     with:
       workdir: Frends.AzureBlobStorage.ReadBlob
       env_var_name_1: HiQ_AzureBlobStorage_ConnString
+      env_var_name_2: HiQ_AzureBlobStorage_testsorage01AccessKey
     secrets:
       feed_api_key: ${{ secrets.TASKS_FEED_API_KEY }}
       env_var_value_1: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CONNSTRING }}
+      env_var_value_2: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TESTSORAGE01ACCESSKEY }}
