--- a/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer.csproj
+++ b/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <Version>1.0.0</Version>
     <Authors>Frends</Authors>
 	<Copyright>Frends</Copyright>
