--- a/.github/workflows/DeleteContainer_build_and_test_on_main.yml
+++ b/.github/workflows/DeleteContainer_build_and_test_on_main.yml
@@ -1,18 +1,18 @@
-name: CreateContainer_build_main
+name: DeleteContainer_build_main
 
 on:
   push:
     branches:    
       - main
     paths:
-      - 'Frends.AzureBlobStorage.CreateContainer/**'
+      - 'Frends.AzureBlobStorage.DeleteContainer/**'
   workflow_dispatch:
 
 jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/build_main.yml@main
     with:
-      workdir: Frends.AzureBlobStorage.CreateContainer
+      workdir: Frends.AzureBlobStorage.DeleteContainer
       env_var_name_1: HiQ_AzureBlobStorage_ConnString
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
