--- a/.github/workflows/DeleteContainer_release.yml
+++ b/.github/workflows/DeleteContainer_release.yml
@@ -1,4 +1,4 @@
-name: CreateContainer_release
+name: DeleteContainer_release
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/release.yml@main
     with:
-      workdir: Frends.AzureBlobStorage.CreateContainer
+      workdir: Frends.AzureBlobStorage.DeleteContainer
       env_var_name_1: HiQ_AzureBlobStorage_ConnString
     secrets:
       feed_api_key: ${{ secrets.TASKS_FEED_API_KEY }}
