--- a/.github/workflows/ReadBlob_build_and_test_on_push.yml
+++ b/.github/workflows/ReadBlob_build_and_test_on_push.yml
@@ -17,5 +17,6 @@ jobs:
       env_var_name_2: HiQ_AzureBlobStorage_testsorage01AccessKey
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
+      test_feed_api_key: ${{ secrets.TASKS_TEST_FEED_API_KEY }}
       env_var_value_1: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CONNSTRING }}
       env_var_value_2: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TESTSORAGE01ACCESSKEY }}
