--- a/Frends.AzureBlobStorage.UploadBlob/Frends.AzureBlobStorage.UploadBlob.Tests/Frends.AzureBlobStorage.UploadBlob.Tests.csproj
+++ b/Frends.AzureBlobStorage.UploadBlob/Frends.AzureBlobStorage.UploadBlob.Tests/Frends.AzureBlobStorage.UploadBlob.Tests.csproj
@@ -25,9 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="TestFiles\TestFile.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="Downloads\" />
+    <Folder Include="TestFiles\" />
   </ItemGroup>
 
 </Project>
