--- a/.github/workflows/CreateContainer_release.yml
+++ b/.github/workflows/CreateContainer_release.yml
@@ -14,7 +14,7 @@ jobs:
       env_var_name_4: HiQ_AzureBlobStorage_ClientSecret
 
     secrets:
-      badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
+      feed_api_key: ${{ secrets.TASKS_FEED_API_KEY }}
       env_var_value_1: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CONNSTRING }}
       env_var_value_2: ${{ secrets.HIQ_AZUREBLOBSTORAGE_APPID }}
       env_var_value_3: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TENANTID }}
