--- a/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob.csproj
+++ b/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob.csproj
@@ -22,9 +22,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
-	<PackageReference Include="Azure.Storage.Common" Version="12.12.0" />
-	<PackageReference Include="Azure.Core" Version="1.25.0" />
+    <PackageReference Include="Azure.Identity" Version="1.8.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+	<PackageReference Include="Azure.Storage.Common" Version="12.13.0" />
+	<PackageReference Include="Azure.Core" Version="1.26.0" />
 	<PackageReference Include="MimeMapping" Version="1.0.1.37" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
