--- a/.github/workflows/ReadBlob_build_and_test_on_main.yml
+++ b/.github/workflows/ReadBlob_build_and_test_on_main.yml
@@ -15,7 +15,13 @@ jobs:
       workdir: Frends.AzureBlobStorage.ReadBlob
       env_var_name_1: HiQ_AzureBlobStorage_ConnString
       env_var_name_2: HiQ_AzureBlobStorage_testsorage01AccessKey
+      env_var_name_3: HiQ_AzureBlobStorage_AppID
+      env_var_name_4: HiQ_AzureBlobStorage_ClientSecret
+      env_var_name_5: HiQ_AzureBlobStorage_TenantID
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       env_var_value_1: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CONNSTRING }}
       env_var_value_2: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TESTSORAGE01ACCESSKEY }}
+      env_var_value_3: ${{ secrets.HIQ_AZUREBLOBSTORAGE_APPID }}
+      env_var_value_4: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CLIENTSECRET }}
+      env_var_value_5: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TENANTID }}
