--- a/.github/workflows/ReadBlob_build_and_test_on_push.yml
+++ b/.github/workflows/ReadBlob_build_and_test_on_push.yml
@@ -25,4 +25,4 @@ jobs:
       env_var_value_2: ${{ secrets.HIQ_AZUREBLOBSTORAGE_APPID }}
       env_var_value_3: ${{ secrets.HIQ_AZUREBLOBSTORAGE_CLIENTSECRET }}
       env_var_value_4: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TENANTID }}
-      env_var_value_5: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TESTSORAGE01ACCESSKEY }
+      env_var_value_5: ${{ secrets.HIQ_AZUREBLOBSTORAGE_TESTSORAGE01ACCESSKEY }}
