--- a/.github/workflows/UploadBlob_build_and_test_on_push.yml
+++ b/.github/workflows/UploadBlob_build_and_test_on_push.yml
@@ -24,4 +24,5 @@ jobs:
       env_var_value_1: ${{ secrets.Frends_AZUREBLOBSTORAGE_CONNSTRING }}
       env_var_value_2: ${{ secrets.Frends_AZUREBLOBSTORAGE_APPID }}
       env_var_value_3: ${{ secrets.Frends_AZUREBLOBSTORAGE_CLIENTSECRET }}
+      env_var_value_4: ${{ secrets.Frends_AZUREBLOBSTORAGE_TENANTID }}
       env_var_value_5: ${{ secrets.Frends_AZUREBLOBSTORAGE_SASTOKEN }}
