--- a/.github/workflows/DownloadBlob_build_and_test_on_main.yml
+++ b/.github/workflows/DownloadBlob_build_and_test_on_main.yml
@@ -17,9 +17,11 @@ jobs:
       env_var_name_2: Frends_AzureBlobStorage_AppID
       env_var_name_3: Frends_AzureBlobStorage_TenantID
       env_var_name_4: Frends_AzureBlobStorage_ClientSecret
+      env_var_name_5: Frends_AzureBlobStorage_SASToken
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       env_var_value_1: ${{ secrets.Frends_AZUREBLOBSTORAGE_CONNSTRING }}
       env_var_value_2: ${{ secrets.Frends_AZUREBLOBSTORAGE_APPID }}
       env_var_value_3: ${{ secrets.Frends_AZUREBLOBSTORAGE_TENANTID }}
       env_var_value_4: ${{ secrets.Frends_AZUREBLOBSTORAGE_CLIENTSECRET }}
+      env_var_value_5: ${{ secrets.Frends_AZUREBLOBSTORAGE_SASTOKEN }}
