--- a/Frends.AzureBlobStorage.ListContainers/Frends.AzureBlobStorage.ListContainers/Frends.AzureBlobStorage.ListContainers.csproj
+++ b/Frends.AzureBlobStorage.ListContainers/Frends.AzureBlobStorage.ListContainers/Frends.AzureBlobStorage.ListContainers.csproj
@@ -37,5 +37,10 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+	
+    <ItemGroup>
+        <Content Include="migration.json" PackagePath="/" Pack="true" />
+        <Content Include="../CHANGELOG.md" PackagePath="/" Pack="true" />
+    </ItemGroup>
 
 </Project>
