--- a/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer.csproj
+++ b/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer/Frends.AzureBlobStorage.CreateContainer.csproj
@@ -15,13 +15,17 @@
     <RepositoryUrl>https://github.com/FrendsPlatform/Frends.AzureBlobStorage/tree/main/Frends.AzureBlobStorage.CreateContainer</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="FrendsTaskMetadata.json" Pack="true" PackagePath="/">
+    <AdditionalFiles Include="FrendsTaskMetadata.json" Pack="true" PackagePath="/">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+    <PackageReference Include="FrendsTaskAnalyzers" Version="1.9.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="migration.json" PackagePath="/" Pack="true" />
