fix tests for listblobsInContainer

--- a/.github/workflows/ListBlobsInContainer_build_and_test_on_push.yml
+++ b/.github/workflows/ListBlobsInContainer_build_and_test_on_push.yml
@@ -19,6 +19,7 @@ jobs:
       env_var_name_4: Frends_AzureBlobStorage_TenantID
       env_var_name_5: Frends_AzureBlobStorage_frendstaskstestcontainerAccessKey
       env_var_name_6: Frends_AzureBlobStorage_URI
+      env_var_name_7: Frends_AzureBlobStorage_StorageAccount
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       test_feed_api_key: ${{ secrets.TASKS_TEST_FEED_API_KEY }}
@@ -28,3 +29,4 @@ jobs:
       env_var_value_4: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_TENANTID }}
       env_var_value_5: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_FRENDSTASKSTESTCONTAINERACCESSKEY }}
       env_var_value_6: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_URI }}
+      env_var_value_7: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_STORAGEACCOUNT }}
