--- a/.github/workflows/ReadBlob_build_and_test_on_main.yml
+++ b/.github/workflows/ReadBlob_build_and_test_on_main.yml
@@ -18,6 +18,7 @@ jobs:
       env_var_name_3: Frends_AzureBlobStorage_ClientSecret
       env_var_name_4: Frends_AzureBlobStorage_TenantID
       env_var_name_5: Frends_AzureBlobStorage_frendstaskstestcontainerAccessKey
+      env_var_name_6: Frends_AzureBlobStorage_StorageAccount
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       env_var_value_1: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_CONNSTRING }}
@@ -25,3 +26,4 @@ jobs:
       env_var_value_3: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_CLIENTSECRET }}
       env_var_value_4: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_TENANTID }}
       env_var_value_5: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_FRENDSTASKSTESTCONTAINERACCESSKEY }}
+      env_var_value_6: ${{ secrets.FRENDS_AZUREBLOBSTORAGE_STORAGEACCOUNT }}
