--- a/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob.csproj
+++ b/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob/Frends.AzureBlobStorage.DownloadBlob.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0</TargetFrameworks>
-        <Version>1.5.0</Version>
+        <TargetFramework>net6.0</TargetFramework>
+        <Version>1.6.0</Version>
         <Authors>Frends</Authors>
         <Copyright>Frends</Copyright>
         <Company>Frends</Company>
